Archive2/80/ad7f5ae9b92b64/output
main.cpp: In function 'int main()':
main.cpp:5:9: error: increment of read-only location 'p.boost::shared_ptr<T>::operator*<const int>()'
     (*p)++;
         ^
