Archive2/80/ad7f5ae9b92b64/main.cpp
#include <boost/shared_ptr.hpp>

int main () {
    boost::shared_ptr<const int> p ( new int);
    (*p)++;
}